TEST_PROGRAMS/VALID_TYPECHECK/mult_runes.go
package main;

func main() {
    
    //this operation is not allowed
    var c = 'g';
    var x = 'g'*c;
    print(x);
}
