TEST_PROGRAMS/INVALID/04/11.go
package main

func main() {
    //Illegal multiple chars in rune
    var x = 'aa'
    x++ // "use" x
}
